--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Becoming An Engineer
-description: Engineering resources
+title: SevenPines
+description: Learn
 markdown: kramdown
 kramdown:
   math_engine: mathjax
