--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ description: Learn
 markdown: kramdown
 theme: minima
 include:
- - assets/css/style.css
+ - assets/css/font.css
 kramdown:
   math_engine: mathjax
